@@ -78,6 +78,9 @@ New Features
 * SOLR-5441: Expose number of transaction log files and their size via JMX.
   (Rafał Kuć via shalin)
 
+* SOLR-5320: Added support for tri-level compositeId routing.
+  (Anshum Gupta via shalin)
+
 Bug Fixes
 ----------------------
 
